--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -33,3 +33,42 @@ body {
 .name {
   font-weight: bold;
 }
+
+
+// Second project
+.container {
+  padding: 16px;
+  border: 1px solid #ccc;
+  background: #eee;
+  margin-bottom: 32px;
+}
+
+.button {
+  padding: 4px 8px;
+  border: 1px solid #ccc;
+  background-color: white;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button:not([disabled]) {
+  cursor: pointer;
+}
+
+button:not([disabled]):hover {
+  background-color: salmon;
+  color: white;
+}
+
+.highlight {
+  font-weight: bold;
+}
+
+
+
+
+
+
+
+
+
